<resources>
    <string name="app_name">Money Mana</string>
    <string name="camera_access_denyded_text">Для полноценной работы приложения необходимо разрешение на использовании камеры</string>
    <string name="check_amount">Сумма чека</string>
    <string name="check_date">Дата чека</string>
    <string name="camera_access_denided">Для возможности сканирования чеков приложению необходимо предоставить доступ к камере телефона</string>
    <string name="budget_settings">бюджет %d ₽ \n потрачено %d ₽</string>
    <string name="sum_remained"> %d</string>
    <string name="text_remained">остаток: </string>
    <string name="text_overrun">перерасход: </string>
    <string name="apply_text_button">применить</string>
    <string name="checked_textview">активный</string>
    <string name="name_category_textview">Наименование категории</string>
    <string name="sum_budget_textview">Сумма бюджета</string>
    <string name="sum_spent">всего потрачено \n %d ₽</string>
    <string name="camera_confirm_text_button">добавить</string>
    <string name="camera_cancel_text_button">отменить</string>
    <string name="content_description">contentDescription</string>
</resources>