<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.camera.view.PreviewView
        android:id="@+id/camera_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <SurfaceView
        android:id="@+id/overlay"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="@id/camera_view"
        app:layout_constraintEnd_toEndOf="@id/camera_view"
        app:layout_constraintBottom_toBottomOf="@id/camera_view"
        app:layout_constraintTop_toTopOf="@id/camera_view" />

    <TextView
        android:id="@+id/flag_permission_camera"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:textColor="@color/white"
        android:visibility="gone"
        android:textSize="24sp"
        android:textAlignment="center"
        android:text="@string/camera_access_denided"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <View
        android:id="@+id/panel_view"
        android:layout_width="0dp"
        android:layout_height="235dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/corner_view"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/date_textinput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="2dp"
        android:enabled="false"
        android:textColorHint="@color/white_light"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/panel_view">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/date_textedit"
            android:hint="@string/check_date"
            android:inputType="time"
            android:textAlignment="center"
            android:enabled="false"
            android:textColor="@color/white_light"
            android:textSize="16sp"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/money_textinput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        style="@style/CameraTextInputLayoutStyle"
        android:theme="@style/CameraTextInputLayoutStyle"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="2dp"
        android:textColorHint="@color/white_light"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/date_textinput"
        android:layout_gravity="top">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/money_textedit"
            android:hint="@string/check_amount"
            android:inputType="number"
            android:textAlignment="center"
            android:textColor="@color/white_light"
            android:textSize="16sp"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatSpinner
        android:popupBackground="@android:color/transparent"
        android:id="@+id/category_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/money_textinput" />

    <Button
        android:id="@+id/confirm_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/light_grey"
        android:enabled="false"
        android:text="@string/camera_confirm_text_button"
        android:textColor="@color/white"
        app:layout_constraintEnd_toStartOf="@id/exit_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/category_spinner" />

    <Button
        android:id="@+id/exit_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/primaryColor"
        android:text="@string/camera_cancel_text_button"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/confirm_button"
        app:layout_constraintTop_toBottomOf="@id/category_spinner" />

</androidx.constraintlayout.widget.ConstraintLayout>